--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -72,6 +72,12 @@
         </a>
         {% endif %}
 
+        {% if site.dblp %}
+        <a style="margin: 0 5px 0 0" href="{{ site.dblp }}">
+          <i class="ai ai-dblp" style="font-size:1.2rem"></i>
+        </a>  
+        {% endif %}
+
         {% if site.github_link %}
         <a style="margin: 0 5px 0 0" href="{{ site.github_link }}">
           <i class="fab fa-github"></i>
